--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.0.4",
+    "path": "^0.12.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.4"
   },
   "dependencies": {
